--- a/_includes/section_certifications.html
+++ b/_includes/section_certifications.html
@@ -1,18 +1,18 @@
-{% if site.coursera %}
+{% if site.certifications %}
 	<div id="coursesBubble" class="rounded_panel txt_lightgrey">
 		<div class="top-rounded-panel grey-bg">
-			<h1>Coursera</h1>
+			<h1>Certifications</h1>
 		</div>
 		<div class="content-rounded-panel">
-			<div id="courseraPanel">
-				{% for course in site.coursera.courses %}
+			<div id="certificationsPanel">
+				{% for course in site.certifications.courses %}
 				<div class="row">
 					{% if course.optionalimage %}
-						<div class="col-sm-5">
-							<img src="{{course.optionalimage}}">
+						<div class="col-sm-3">
+							<img height="{{course.imagesize}}" src="{{course.optionalimage}}">
 						</div>
 					{% endif %}
-					<div class="col-sm-6">
+					<div class="col-sm-9">
 						<a target='_blank' href="{{course.link}}">
 							{{course.title}}
 						</a><br/>
